--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,4 @@
-blinker==1.9.0
-click==8.2.1
-Flask==3.1.1
-flask-cors==6.0.1
-Flask-HTTPAuth==4.8.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-Werkzeug==3.1.3
+Flask==2.2.2
+flask-cors==3.0.10
+flask-httpauth==4.7.0
+Werkzeug==2.2.2
